# sys_infos

./: Cargo.toml  README.md  build.rs
.github/workflows/: Pre-build.yml
src/: main.rs
