[package]
name = "sys_infos"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }

[dependencies]
chrono = { version = "0.4.42", default-features = false,features = ["clock"] }
regex = "1.11.3"
